# vacation-tracker

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_create_tables.py  002_update_timestamps.py
backend/src/: main.py
backend/src/api/: database.py  models.py  routes.py
frontend/: Dockerfile  package-lock.json  package.json
frontend copy/: Dockerfile
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  types.tsx
frontend/src/components/: ThemeToggle.tsx  VacationForm.tsx  VacationGraph.tsx  VacationList.tsx
