[tool.poetry]
name = "vacation-tracker-backend"
version = "0.1.0"
description = ""
authors = ["Aaron Brazier <aaronbrazier@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
